fixed unit tests following refactorof CCLF batch logic