@@ -1,13 +1,11 @@
 package uk.gov.justice.laa.maat.scheduled.tasks.service;
 
-import java.util.Collections;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.justice.laa.maat.scheduled.tasks.client.CrownCourtLitigatorFeesApiClient;
-import uk.gov.justice.laa.maat.scheduled.tasks.config.BillingConfiguration;
 import uk.gov.justice.laa.maat.scheduled.tasks.dto.ApplicantBillingDTO;
 import uk.gov.justice.laa.maat.scheduled.tasks.entity.ApplicantBillingEntity;
 import uk.gov.justice.laa.maat.scheduled.tasks.enums.BillingDataFeedRecordType;
@@ -18,6 +16,7 @@ import java.util.List;
 import uk.gov.justice.laa.maat.scheduled.tasks.request.UpdateApplicantsRequest;
 
 import static org.mockito.Mockito.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestEntityDataBuilder.getPopulatedApplicantBillingEntity;
 import static uk.gov.justice.laa.maat.scheduled.tasks.builder.TestModelDataBuilder.getApplicantDTO;
 
@@ -32,60 +31,40 @@ class ApplicantBillingServiceTest {
     @Mock
     private ApplicantMapper applicantMapper;
     @Mock
-    private BillingConfiguration billingConfiguration;
-    @Mock
     private BillingDataFeedLogService billingDataFeedLogService;
     @Mock
     private CrownCourtLitigatorFeesApiClient crownCourtLitigatorFeesApiClient;
     @InjectMocks
     private ApplicantBillingService applicantBillingService;
 
+
     @Test
-    void givenDataDoesNotRequireBatchedRequests_whenSendApplicantsToBillingIsInvoked_thenBillingIsCalledOnce() {
+    void givenApplicantDataExists_whenFindApplicantsForBillingIsInvoked_thenApplicantDataIsReturned() {
         ApplicantBillingEntity entity = getPopulatedApplicantBillingEntity(TEST_ID);
         ApplicantBillingDTO dto = getApplicantDTO(TEST_ID);
 
-        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(List.of(entity, entity));
+        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(
+            List.of(entity, entity));
         when(applicantMapper.mapEntityToDTO(entity)).thenReturn(dto);
-        when(applicantBillingRepository.resetApplicantBilling(anyList(), anyString())).thenReturn(1);
-        when(billingConfiguration.getRequestBatchSize()).thenReturn(5);
-        when(billingConfiguration.getResetBatchSize()).thenReturn(1000);
 
-        applicantBillingService.extractApplicantBillingData(USER_MODIFIED);
+        List<ApplicantBillingDTO> applicants = applicantBillingService.findAllApplicantsForBilling();
 
-        verify(applicantBillingRepository, times(1)).resetApplicantBilling(List.of(TEST_ID, TEST_ID), USER_MODIFIED);
-        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(dto, dto).toString());
-        verify(crownCourtLitigatorFeesApiClient, times(1)).updateApplicants(any(UpdateApplicantsRequest.class));
+        assertEquals(List.of(dto, dto), applicants);
     }
 
     @Test
-    void givenDataRequiresBatchedRequests_whenSendApplicantsToBillingIsInvoked_thenBillingIsCalledMultipleTimes() {
-        ApplicantBillingEntity entity = getPopulatedApplicantBillingEntity(TEST_ID);
+    void givenValidData_whenSendApplicantsToBillingIsInvoked_thenDatabaseUpdatedAndCCLFCalled() {
         ApplicantBillingDTO dto = getApplicantDTO(TEST_ID);
 
-        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(List.of(entity, entity));
-        when(applicantMapper.mapEntityToDTO(entity)).thenReturn(dto);
-        when(applicantBillingRepository.resetApplicantBilling(anyList(), anyString())).thenReturn(1);
-        when(billingConfiguration.getRequestBatchSize()).thenReturn(1);
-        when(billingConfiguration.getResetBatchSize()).thenReturn(1);
+        when(applicantBillingRepository.resetApplicantBilling(anyList(), anyString())).thenReturn(
+            1);
 
-        applicantBillingService.extractApplicantBillingData(USER_MODIFIED);
+        applicantBillingService.sendApplicantsToBilling(List.of(dto), USER_MODIFIED);
 
-        verify(applicantBillingRepository, times(2)).resetApplicantBilling(List.of(TEST_ID), USER_MODIFIED);
-        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(dto, dto).toString());
-        verify(crownCourtLitigatorFeesApiClient, times(2)).updateApplicants(any(UpdateApplicantsRequest.class));
-    }
-
-    @Test
-    void givenNoCCLFDataAvailable_whenSendApplicantsToBillingIsInvoked_thenNoActionsPerformed() {
-        ApplicantBillingDTO dto = getApplicantDTO(TEST_ID);
-
-        when(applicantBillingRepository.findAllApplicantsForBilling()).thenReturn(Collections.emptyList());
-
-        applicantBillingService.extractApplicantBillingData(USER_MODIFIED);
-
-        verify(applicantBillingRepository, never()).resetApplicantBilling(List.of(TEST_ID), USER_MODIFIED);
-        verify(billingDataFeedLogService, never()).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT, List.of(dto).toString());
-        verify(crownCourtLitigatorFeesApiClient, never()).updateApplicants(any(UpdateApplicantsRequest.class));
+        verify(applicantBillingRepository).resetApplicantBilling(List.of(TEST_ID), USER_MODIFIED);
+        verify(billingDataFeedLogService).saveBillingDataFeed(BillingDataFeedRecordType.APPLICANT,
+            List.of(dto).toString());
+        verify(crownCourtLitigatorFeesApiClient).updateApplicants(
+            any(UpdateApplicantsRequest.class));
     }
 }
